--- a/scss/base/_resets.scss
+++ b/scss/base/_resets.scss
@@ -21,7 +21,7 @@
   &::after{
     content:'';
     width: 100%;
-    height: 250px;
+    height: 230px;
     position:absolute;
     top:350px;
     left: 0;
